@@ -84,21 +84,6 @@ This theorem, with the companion definition, <acroref type="definition" acro="EE
 Can you imagine anything nicer than an orthonormal diagonalization?  A basis of pairwise orthogonal, unit norm, eigenvectors that provide a diagonal representation for a matrix?  Here we learn just when this can happen <mdash /> precisely when a matrix is normal, which is a disarmingly simple property to define.
 </p>
 </annoacro>
-<annoacro type="theorem" acro="CFNLT">
-<p>
-Nilpotent linear transformations are the fundamental obstacle to a matrix (or linear transformation) being diagonalizable.  This specialized representation theorem is the fundamental expression of just how close we can come to surmounting the obstacle, <ie /> how close we can come to a diagonal representation.
-</p>
-</annoacro>
-<annoacro type="theorem" acro="DGES">
-<p>
-This theorem is a long time in coming, but perhaps it best explains our interest in generalized eigenspaces.  When the dimension of a <q>regular</q> eigenspace (the geometic multiplicity) does not meet the algebraic multiplicity of the corresponding eigenvalue, then a matrix is not diagonalizable (<acroref type="theorem" acro="DMFE" />).  However, if we generalize the idea of an eigenspace (<acroref type="definition" acro="GES" />), then we arrive at invariant subspaces that together give a complete decomposition of the domain as a direct sum.  And these subspaces have dimensions equal to the corresponding algebraic multiplicities.
-</p>
-</annoacro>
-<annoacro type="theorem" acro="JCFLT">
-<p>
-If you cannot diagonalize, just how close can you come?  This is an answer (there are others, like rational canonical form).  <q>Canonicalism</q> is in the eye of the beholder.  But this is a good place to conclude our study of a widely accepted canonical form that is possible for every matrix or linear transformation.
-</p>
-</annoacro>
 <!--  End R.tex annotated acronyms -->
 </annotatedacronyms>
 </chapter>
